# blog

./: .build.yml  .build.yml.wip  .dir-locals.el  .dockerignore  .gitignore  Dockerfile  Makefile  config.toml  go.mod  go.sum  index.html  index.html.pm  index.ptree  kamelasa.cabal  pollen.rkt  publish.el  redirs.caddy  site.hs  stack.yaml  template.html.p  www-mrlee-dev.cabal  www.leemeichin.com.conf
.builds/: 01-package-bin.yml
.netlify/: state.json
_site/: about.html  archive.html  atom.xml  contact.html  index.html  rss.xml
analytics/: package.json
azure/: build-bin.yml  build-prod.yml  pipeline.yml
css/: main.css  syntax.css
debian/: README.Debian  README.source  changelog  control  copyright  kamelasa.install  postinst
legal/: terminalcss.md
org/: index.org
posts/: a-damn-good-listen.md  a-damn-good-listen.org  a-damn-good-listen.poly.pm  a-decade-of-work.md  a-decade-of-work.org  a-decade-of-work.poly.pm  agile-lipstick.md  agile-lipstick.org  agile-lipstick.poly.pm  blog-hacking.md  blogging-in-haskell.md  blogging-in-haskell.org  blogging-in-haskell.poly.pm  can-you-crack-the-code.md  can-you-crack-the-code.org  can-you-crack-the-code.poly.pm  celebrate-each-other.md  celebrate-each-other.org  celebrate-each-other.poly.pm  devops.md  devops.org  devops.poly.pm  do-you-really-need-those-microservices.md  do-you-really-need-those-microservices.org  do-you-really-need-those-microservices.poly.pm  enough.md  enough.org  enough.poly.pm  floc-off.md  floc-off.org  floc-off.poly.pm  gettin-ziggy-with-it-pi-zero.md  gettin-ziggy-with-it-pi-zero.org  (+65 more)
(+137 files in other folders)
