name:               kamelasa
version:            0.1.0
build-type:         Simple
cabal-version:      >= 1.10

executable kamelasa
  main-is:          kamelasa.hs
  build-depends:    base == 4.*
                  , hakyll == 4.13.*
                  , filepath == 1.4.*
                  , process == 1.6.*
                  , text == 1.2.*
                  , split == 0.2.*
                  
  ghc-options:      -threaded
  default-language: Haskell2010
